OutOvernight transactions with big changes in style and stracture
