# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\API\Auth\AuthController;
 use App\Http\Controllers\API\CustomerAPIController;
 use App\Http\Controllers\API\PlanController as APIPlanController;
+use App\Http\Controllers\API\TenantApiController;
 use App\Http\Controllers\API\TransactionAPIController;
 use App\Http\Controllers\API\UserAPIController;
 use Illuminate\Support\Facades\Route;
@@ -29,8 +30,10 @@ Route::group(['prefix' => 'auth'], function () {
 Route::group(['middleware' => 'auth:sanctum'], function () {
     Route::group(['prefix' => 'transactions'], function () {
         Route::post('checkin', [TransactionAPIController::class, 'checkIn']);
+        Route::post('checkin-overnight', [TransactionAPIController::class, 'checkInOvernight']);
         Route::post('checkin-client/{client_id}', [TransactionAPIController::class, 'checkInClient']);
         Route::post('checkout/{qr_code?}', [TransactionAPIController::class, 'checkOut']);        
+        Route::post('checkout-overnight/{qr_code?}', [TransactionAPIController::class, 'checkoutOvernight']);        
         Route::post('checkout-clinet/{client_id}', [TransactionAPIController::class, 'checkOutClient']);        
         Route::put('collect', [TransactionAPIController::class, 'actualCollect']);        
         Route::post('checkout-plate/{plate}', [TransactionAPIController::class, 'checkOutByPlate']);        
@@ -50,3 +53,6 @@ Route::resource('zones', App\Http\Controllers\API\ZoneAPIController::class);
 
 
 Route::resource('customerVehicles', App\Http\Controllers\API\CustomerVehicleAPIController::class);
+
+
+Route::post('create-tenant',[TenantApiController::class, 'createTenant']);
